--- a/src/main/webapp/assets/css/light-bootstrap-dashboard.css
+++ b/src/main/webapp/assets/css/light-bootstrap-dashboard.css
@@ -470,7 +470,7 @@ body>.navbar-collapse .nav li:hover .nav-link {
 
 .sidebar .nav li.active .nav-link,
 body>.navbar-collapse .nav li.active .nav-link {
-    color: #FFFFFF;
+    color: #000000;
     opacity: 1;
     background: rgba(255, 255, 255, 0.23);
 }
@@ -519,7 +519,7 @@ body>.navbar-collapse .nav .nav-link {
 
 .sidebar .logo,
 body>.navbar-collapse .logo {
-    padding: 10px 15px;
+    padding: 0px 0px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -585,12 +585,12 @@ body>.navbar-collapse:before {
  .sidebar:after,
 body>.navbar-collapse:after {
     background: #CEEDF2;
-    background: -moz-linear-gradient(top, #3E6970 0%, #3E6970 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3E6970), color-stop(100%, #3E6970));
-    background: -webkit-linear-gradient(top, #3E6970 0%, #3E6970 100%);
-    background: -o-linear-gradient(top, #3E6970 0%, #3E6970 100%);
-    background: -ms-linear-gradient(top, #3E6970 0%, #3E6970 100%);
-    background: linear-gradient(to bottom, #3E6970 0%, #3E6970 100%);
+    background: -moz-linear-gradient(top, #F5A302 0%, #F5A302 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #F5A302), color-stop(100%, #F5A302));
+    background: -webkit-linear-gradient(top, #F5A302 0%, #F5A302 100%);
+    background: -o-linear-gradient(top, #F5A302 0%, #F5A302 100%);
+    background: -ms-linear-gradient(top, #F5A302 0%, #F5A302 100%);
+    background: linear-gradient(to bottom, #F5A302 0%, #F5A302 100%);
     background-size: 150% 150%;
     z-index: 3;
     opacity: 1;
@@ -1963,7 +1963,7 @@ fieldset[disabled] .form-control {
     border-radius: 0;
     min-height: 50px;
     max-height: 61px;
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: #F4B301;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
@@ -1971,7 +1971,7 @@ fieldset[disabled] .form-control {
     font-weight: 400;
     margin: 5px 0px;
     font-size: 20px;
-    color: #888888;
+    color: #FFFFFF;
 }
 
 .navbar .navbar-brand:hover {
@@ -2015,7 +2015,7 @@ fieldset[disabled] .form-control {
 }
 
 .navbar .navbar-nav .nav-item .nav-link {
-    color: #888888;
+    color: #FFFFFF;
     padding: 10px 15px;
     margin: 10px 3px;
     position: relative;
@@ -2040,7 +2040,7 @@ fieldset[disabled] .form-control {
 }
 
 .navbar .navbar-nav .nav-item .nav-link:hover {
-    color: #1DC7EA;
+    color: #000000;
 }
 
 .navbar .navbar-nav .nav-item .dropdown-menu {
@@ -2062,7 +2062,7 @@ fieldset[disabled] .form-control {
     height: 1px;
     margin: 5px 0;
     overflow: hidden;
-    background-color: #e5e5e5;
+    background-color: #FFFFFF;
 }
 
 .navbar .navbar-nav .notification {
@@ -2184,7 +2184,7 @@ fieldset[disabled] .form-control {
 
 .navbar-transparent .btn-default.btn-fill,
 [class*="navbar-ct"] .btn-default.btn-fill {
-    color: #9A9A9A;
+    color: #FFFFFF;
     background-color: #FFFFFF;
     opacity: 0.9;
     filter: alpha(opacity=90);
